# lm_pretrain

./: pyproject.toml
lm_pretrain/: config.py  dataset_processor.py  train.py
