[tool.poetry]
name = "lm_pretrain"
version = "0.1.0"
description = "language model pretrain"
authors = ["Jerry <sa517301@mail.ustc.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
